--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>東大理系数学の解剖|BASE256</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="favicon.ico">
+
     
     <!--latex読み込み-->
     <script type="text/javascript"
@@ -94,11 +96,11 @@
             <div class="emphbox">
                 <p>良問の宝庫：東大理系数学のあれこれを調べ上げて、まとめページを作ってみました。</p>
 
-                <p>問題の難易度や得点戦略よりも、<span style="font-weight: bold;">背景の深掘りや類題研究</span>等を重視したいと思っています。そのため、問題そのものの解答は略解のみ、もしくは省略とさせていただく事が多いです。（そもそも他のサイトで少し探せば解説はすぐ見つかるので...。）</p>
+                <p>問題の難易度や得点戦略よりも、<span style="font-weight: bold;color: yellow;">背景の深掘りや類題研究</span>等を重視したいと思っています。そのため、問題そのものの解答は略解のみ、もしくは省略とさせていただく事が多いです。（そもそも他のサイトで少し探せば解説はすぐ見つかるので...。）</p>
 
-                <p>過去問の解説とかの端っこに書いてある「コラム」を読む感覚で使っていただければ幸いです。</p><br>
+                <p>過去問の解説とかの端っこに書いてある「コラム」を読む感覚で使っていただければ幸いです。</p>
 
-                <p style="font-size: 0.8em;">未着手の記事は半透明化&無効化してあります。<br>また、難易度は「大学への数学」による評価を参照しています。そのため、「当時の受験生にとっての難易度」であることに注意してください</p><br>
+                <p style="font-size: 0.8em;color: #999;">未着手の記事は半透明化&無効化してあります。<br>また、難易度は「大学への数学」による評価を参照しています。そのため、「当時の受験生にとっての難易度」であることに注意してください</p>
 
                 <p style="color: yellow;">★内容に関する問い合わせ、改善案、類題提供などありましたら、主のTwitter（<a href="https://x.com/NABLA_DEL">https://x.com/NABLA_DEL</a>）へお寄せください！★</p>
             </div>
