--- a/pages/2019_5.html
+++ b/pages/2019_5.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>2019年東大理系数学第5問</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="../favicon.ico">
     
     <!--latex読み込み-->
     
