--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <td>概観</td><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td>
                 </tr>
                 <tr>
-                    <th>2025<br><span style="font-size: 0.5em;">新科目「情報」</span></th>
+                    <th>2025年<br><span style="font-size: 0.5em;">新科目「情報」</span></th>
                     <td><a href="pages/gaikan2025.html">2025概観<img class="fi"></a></td>
                     <td><a href="pages/2025_1.html"><img class="fi" src="pages/td/スライド1.JPG" alt="2025-1"></a></td>
                     <td><a href="pages/2025_2.html"><img class="fi" src="pages/td/スライド2.JPG" alt="2025-2"></a></td>
@@ -157,7 +157,7 @@
                     <td><a href="pages/2025_6.html"><img class="fi" src="pages/td/スライド6.JPG" alt="2025-6"></a></td>
                 </tr>
                 <tr>
-                    <th>2024<br><span style="font-size: 0.5em;">計算重め</span></th>
+                    <th>2024年<br><span style="font-size: 0.5em;">計算重め</span></th>
                     <td></td>
                     <td><a href="pages/2024_1.html"><img class="fi new" src="pages/td/スライド7.JPG" alt="2024-1"></a></td>
                     <td><a href="pages/2024_2.html"><img src="pages/td/スライド8.JPG" alt="2024-2"></a></td>
@@ -167,7 +167,7 @@
                     <td><a href="pages/2024_6.html"><img src="pages/td/スライド12.JPG" alt="2024-6"></a></td>
                 </tr>
                 <tr>
-                    <th>2023<br><span style="font-size: 0.5em;">最難級の求積</span></th>
+                    <th>2023年<br><span style="font-size: 0.5em;">最難級の求積</span></th>
                     <td></td>
                     <td><a href="pages/2023_1.html"><img src="pages/td/スライド13.JPG" alt="2023-1"></a></td>
                     <td><a href="pages/2023_2.html"><img src="pages/td/スライド14.JPG" alt="2023-2"></a></td>
@@ -177,7 +177,7 @@
                     <td><a href="pages/2023_6.html"><img src="pages/td/スライド18.JPG" alt="2023-6"></a></td>
                 </tr>
                 <tr>
-                    <th>2022<br><span style="font-size: 0.5em;">個人的お気に入り</span></th>
+                    <th>2022年<br><span style="font-size: 0.5em;">個人的お気に入り</span></th>
                     <td></td>
                     <td><a href="pages/2022_1.html"><img src="pages/td/スライド19.JPG" alt="2022-1"></a></td>
                     <td><a href="pages/2022_2.html"><img src="pages/td/スライド20.JPG" alt="2022-2"></a></td>
@@ -187,7 +187,7 @@
                     <td><a href="pages/2022_6.html"><img src="pages/td/スライド24.JPG" alt="2022-6"></a></td>
                 </tr>
                 <tr>
-                    <th>2021<br><span style="font-size: 0.5em;">前年と少し似てる</span></th>
+                    <th>2021年<br><span style="font-size: 0.5em;">前年と少し似てる</span></th>
                     <td></td>
                     <td><a href="pages/2021_1.html"><img src="pages/td/スライド25.JPG" alt="2021-1"></a></td>
                     <td><a href="pages/2021_2.html"><img src="pages/td/スライド26.JPG" alt="2021-2"></a></td>
@@ -197,7 +197,7 @@
                     <td><a href="pages/2021_6.html"><img src="pages/td/スライド30.JPG" alt="2021-6"></a></td>
                 </tr>
                 <tr>
-                    <th>2020<br><span style="font-size: 0.5em;">難化ラッシュの起点</span></th>
+                    <th>2020年<br><span style="font-size: 0.5em;">難化ラッシュの起点</span></th>
                     <td></td>
                     <td><a href="pages/2020_1.html"><img src="pages/td/スライド31.JPG" alt="2020-1"></a></td>
                     <td><a href="pages/2020_2.html"><img src="pages/td/スライド32.JPG" alt="2020-2"></a></td>
@@ -207,7 +207,7 @@
                     <td><a href="pages/2020_6.html"><img class="fi new ans" src="pages/td/スライド36.JPG" alt="2020-6"></a></td>
                 </tr>
                 <tr>
-                    <th>2019<br><span style="font-size: 0.5em;">伝説の積分</span></th>
+                    <th>2019年<br><span style="font-size: 0.5em;">伝説の積分</span></th>
                     <td></td>
                     <td><a href="pages/2019_1.html"><img class="fi new" src="pages/td/スライド37.JPG" alt="2019-1"></a></td>
                     <td><a href="pages/2019_2.html"><img src="pages/td/スライド38.JPG" alt="2019-2"></a></td>
@@ -217,7 +217,7 @@
                     <td><a href="pages/2019_6.html"><img src="pages/td/スライド42.JPG" alt="2019-6"></a></td>
                 </tr>
                 <tr>
-                    <th>2018<br><span style="font-size: 0.5em;">複素がD</span></th>
+                    <th>2018年<br><span style="font-size: 0.5em;">複素がD</span></th>
                     <td></td>
                     <td><a href="pages/2018_1.html"><img src="pages/td/スライド43.JPG" alt="2018-1"></a></td>
                     <td><a href="pages/2018_2.html"><img src="pages/td/スライド44.JPG" alt="2018-2"></a></td>
@@ -227,7 +227,7 @@
                     <td><a href="pages/2018_6.html"><img src="pages/td/スライド48.JPG" alt="2018-6"></a></td>
                 </tr>
                 <tr>
-                    <th>2017<br><span style="font-size: 0.5em;">珍しくA問題がある</span></th>
+                    <th>2017年<br><span style="font-size: 0.5em;">珍しくA問題がある</span></th>
                     <td></td>
                     <td><a href="pages/2017_1.html"><img src="pages/td/スライド49.JPG" alt="2017-1"></a></td>
                     <td><a href="pages/2017_2.html"><img src="pages/td/スライド50.JPG" alt="2017-2"></a></td>
@@ -237,7 +237,7 @@
                     <td><a href="pages/2017_6.html"><img src="pages/td/スライド54.JPG" alt="2017-6"></a></td>
                 </tr>
                 <tr>
-                    <th>2016<br><span style="font-size: 0.5em;">謎の多い大問5</span></th>
+                    <th>2016年<br><span style="font-size: 0.5em;">謎の多い大問5</span></th>
                     <td></td>
                     <td><a href="pages/2016_1.html"><img src="pages/td/スライド55.JPG" alt="2016-1"></a></td>
                     <td><a href="pages/2016_2.html"><img src="pages/td/スライド56.JPG" alt="2016-2"></a></td>
@@ -247,7 +247,7 @@
                     <td><a href="pages/2016_6.html"><img src="pages/td/スライド60.JPG" alt="2016-6"></a></td>
                 </tr>
                 <tr>
-                    <th>2015<br><span style="font-size: 0.5em;">二項係数</span></th>
+                    <th>2015年<br><span style="font-size: 0.5em;">二項係数</span></th>
                     <td></td>
                     <td><a href="pages/2015_1.html"><img src="pages/td/スライド61.JPG" alt="2015-1"></a></td>
                     <td><a href="pages/2015_2.html"><img src="pages/td/スライド62.JPG" alt="2015-2"></a></td>
@@ -257,7 +257,7 @@
                     <td><a href="pages/2015_6.html"><img src="pages/td/スライド66.JPG" alt="2015-6"></a></td>
                 </tr>
                 <tr>
-                    <th>2014<br><span style="font-size: 0.5em;">抽象的な問題が多い</span></th>
+                    <th>2014年<br><span style="font-size: 0.5em;">抽象的な問題が多い</span></th>
                     <td></td>
                     <td><a href="pages/2014_1.html"><img src="pages/td/スライド67.JPG" alt="2014-1"></a></td>
                     <td><a href="pages/2014_2.html"><img src="pages/td/スライド68.JPG" alt="2014-2"></a></td>
@@ -267,7 +267,7 @@
                     <td><a href="pages/2014_6.html"><img src="pages/td/スライド72.JPG" alt="2014-6"></a></td>
                 </tr>
                 <tr>
-                    <th>2013<br><span style="font-size: 0.5em;">大問5は奇問ばかり</span></th>
+                    <th>2013年<br><span style="font-size: 0.5em;">大問5は奇問ばかり</span></th>
                     <td></td>
                     <td><a href="pages/2013_1.html"><img src="pages/td/スライド73.JPG" alt="2013-1"></a></td>
                     <td><a href="pages/2013_2.html"><img src="pages/td/スライド74.JPG" alt="2013-2"></a></td>
@@ -277,7 +277,7 @@
                     <td><a href="pages/2013_6.html"><img src="pages/td/スライド78.JPG" alt="2013-6"></a></td>
                 </tr>
                 <tr>
-                    <th>2012<br><span style="font-size: 0.5em;">最後の行列出題年</span></th>
+                    <th>2012年<br><span style="font-size: 0.5em;">最後の行列出題年</span></th>
                     <td></td>
                     <td><a href="pages/2012_1.html"><img src="pages/td/スライド79.JPG" alt="2012-1"></a></td>
                     <td><a href="pages/2012_2.html"><img src="pages/td/スライド80.JPG" alt="2012-2"></a></td>
@@ -287,7 +287,7 @@
                     <td><a href="pages/2012_6.html"><img src="pages/td/スライド84.JPG" alt="2012-6"></a></td>
                 </tr>
                 <tr>
-                    <th>2011<br><span style="font-size: 0.5em;">絶望的計算量の多さ</span></th>
+                    <th>2011年<br><span style="font-size: 0.5em;">絶望的計算量の多さ</span></th>
                     <td></td>
                     <td><a href="pages/2011_1.html"><img class="ans" src="pages/td/スライド85.JPG" alt="2011-1"></a></td>
                     <td><a href="pages/2011_2.html"><img class="" src="pages/td/スライド86.JPG" alt="2011-2"></a></td>
@@ -297,7 +297,7 @@
                     <td><a href="pages/2011_6.html"><img class="ans" src="pages/td/スライド90.JPG" alt="2011-6"></a></td>
                 </tr>
                 <tr>
-                    <th>2010<br><span style="font-size: 0.5em;">前年度に次ぐLR箱</span></th>
+                    <th>2010年<br><span style="font-size: 0.5em;">前年度に次ぐLR箱</span></th>
                     <td></td>
                     <td><a href="pages/2010_1.html"><img src="pages/td/スライド91.JPG" alt="2010-1"></a></td>
                     <td><a href="pages/2010_2.html"><img src="pages/td/スライド92.JPG" alt="2010-2"></a></td>
@@ -308,7 +308,7 @@
                 </tr>
 
                 <tr>
-                    <th>2009<br><span style="font-size: 0.5em;">なんと第1問から整数</span></th><td></td>
+                    <th>2009年<br><span style="font-size: 0.5em;">なんと第1問から整数</span></th><td></td>
                     <td><a href="pages/2009_1.html"><img src="pages/td/スライド97.JPG" alt="2009-1"></a></td>
                     <td><a href="pages/2009_2.html"><img src="pages/td/スライド98.JPG" alt="2009-2"></a></td>
                     <td><a href="pages/2009_3.html"><img src="pages/td/スライド99.JPG" alt="2009-3"></a></td>
@@ -318,7 +318,7 @@
                 </tr>
 
                 <tr>
-                    <th>2008<br><span style="font-size: 0.5em;"></span></th><td></td>
+                    <th>2008年<br><span style="font-size: 0.5em;"></span></th><td></td>
                     <td><a href="pages/2008_1.html"><img src="pages/td/スライド103.JPG" alt="2008-1"></a></td>
                     <td><a href="pages/2008_2.html"><img src="pages/td/スライド104.JPG" alt="2008-2"></a></td>
                     <td><a href="pages/2008_3.html"><img src="pages/td/スライド105.JPG" alt="2008-3"></a></td>
@@ -328,7 +328,7 @@
                 </tr>
 
                 <tr>
-                    <th>2007<br><span style="font-size: 0.5em;">ボス問が不等式</span></th><td></td>
+                    <th>2007年<br><span style="font-size: 0.43em;">不等式ボス問は最後の年</span></th><td></td>
                     <td><a href="pages/2007_1.html"><img src="pages/td/スライド109.JPG" alt="2007-1"></a></td>
                     <td><a href="pages/2007_2.html"><img src="pages/td/スライド110.JPG" alt="2007-2"></a></td>
                     <td><a href="pages/2007_3.html"><img src="pages/td/スライド111.JPG" alt="2007-3"></a></td>
@@ -338,7 +338,7 @@
                 </tr>
 
                 <tr>
-                    <th>2006<br><span style="font-size: 0.5em;"></span></th><td></td>
+                    <th>2006年<br><span style="font-size: 0.5em;">やたら帰納法が多い</span></th><td></td>
                     <td><a href="pages/2006_1.html"><img src="pages/td/スライド115.JPG" alt="2006-1"></a></td>
                     <td><a href="pages/2006_2.html"><img src="pages/td/スライド116.JPG" alt="2006-2"></a></td>
                     <td><a href="pages/2006_3.html"><img src="pages/td/スライド117.JPG" alt="2006-3"></a></td>
@@ -348,7 +348,7 @@
                 </tr>
 
                 <tr>
-                    <th>2005<br><span style="font-size: 0.45em;">有名になった整数問題</span></th><td></td>
+                    <th>2005年<br><span style="font-size: 0.45em;">有名になった整数問題</span></th><td></td>
                     <td><a href="pages/2005_1.html"><img src="pages/td/スライド121.JPG" alt="2005-1"></a></td>
                     <td><a href="pages/2005_2.html"><img src="pages/td/スライド122.JPG" alt="2005-2"></a></td>
                     <td><a href="pages/2005_3.html"><img src="pages/td/スライド123.JPG" alt="2005-3"></a></td>
@@ -358,7 +358,7 @@
                 </tr>
 
                 <tr>
-                    <th>2004<br><span style="font-size: 0.5em;">積分&小数計算</span></th><td></td>
+                    <th>2004年<br><span style="font-size: 0.5em;">積分&小数計算</span></th><td></td>
                     <td><a href="pages/2004_1.html"><img class="fi new ans" src="pages/td/スライド127.JPG" alt="2004-1"></a></td>
                     <td><a href="pages/2004_2.html"><img src="pages/td/スライド128.JPG" alt="2004-2"></a></td>
                     <td><a href="pages/2004_3.html"><img src="pages/td/スライド129.JPG" alt="2004-3"></a></td>
@@ -368,7 +368,7 @@
                 </tr>
 
                 <tr>
-                    <th>2003<br><span style="font-size: 0.5em;">伝説的名問、$\pi>3.05$</span></th><td></td>
+                    <th>2003年<br><span style="font-size: 0.5em;">伝説的名問、$\pi>3.05$</span></th><td></td>
                     <td><a href="pages/2003_1.html"><img src="pages/td/スライド133.JPG" alt="2003-1"></a></td>
                     <td><a href="pages/2003_2.html"><img src="pages/td/スライド134.JPG" alt="2003-2"></a></td>
                     <td><a href="pages/2003_3.html"><img src="pages/td/スライド135.JPG" alt="2003-3"></a></td>
@@ -378,7 +378,7 @@
                 </tr>
 
                 <tr>
-                    <th>2002<br><span style="font-size: 0.5em;">前年を受けて(?)易化</span></th><td></td>
+                    <th>2002年<br><span style="font-size: 0.5em;">前年を受けて(?)易化</span></th><td></td>
                     <td><a href="pages/2002_1.html"><img src="pages/td/スライド139.JPG" alt="2002-1"></a></td>
                     <td><a href="pages/2002_2.html"><img src="pages/td/スライド140.JPG" alt="2002-2"></a></td>
                     <td><a href="pages/2002_3.html"><img src="pages/td/スライド141.JPG" alt="2002-3"></a></td>
@@ -388,7 +388,7 @@
                 </tr>
 
                 <tr>
-                    <th>2001</th><td></td>
+                    <th>2001年<br><span style="font-size: 0.5em;">第5問から豹変</span></th><td></td>
                     <td><a href="pages/2001_1.html"><img src="pages/td/スライド145.JPG" alt="2001-1"></a></td>
                     <td><a href="pages/2001_2.html"><img src="pages/td/スライド146.JPG" alt="2001-2"></a></td>
                     <td><a href="pages/2001_3.html"><img src="pages/td/スライド147.JPG" alt="2001-3"></a></td>
@@ -398,7 +398,7 @@
                 </tr>
 
                 <tr>
-                    <th>2000</th><td></td>
+                    <th>2000年<br><span style="font-size: 0.5em;"></span></th><td></td>
                     <td><a href="pages/2000_1.html"><img src="pages/td/スライド151.JPG" alt="2000-1"></a></td>
                     <td><a href="pages/2000_2.html"><img src="pages/td/スライド152.JPG" alt="2000-2"></a></td>
                     <td><a href="pages/2000_3.html"><img src="pages/td/スライド153.JPG" alt="2000-3"></a></td>
@@ -408,7 +408,7 @@
                 </tr>
 
                 <tr>
-                    <th>1999</th><td></td>
+                    <th>1999年<br><span style="font-size: 0.5em;">「加法定理を示せ」</span></th><td></td>
                     <td><a href="1998_1999/1999_1.html"><img src="pages/td/スライド157.JPG" alt="1999-1"></a></td>
                     <td><a href="1998_1999/1999_2.html"><img src="pages/td/スライド158.JPG" alt="1999-2"></a></td>
                     <td><a href="1998_1999/1999_3.html"><img src="pages/td/スライド159.JPG" alt="1999-3"></a></td>
@@ -418,7 +418,7 @@
                 </tr>
 
                 <tr>
-                    <th>1998</th><td></td>
+                    <th>1998年<br><span style="font-size: 0.5em;">最高級の良問セット</span></th><td></td>
                     <td><a href="1998_1999/1998_1.html"><img src="pages/td/スライド163.JPG" alt="1998-1"></a></td>
                     <td><a href="1998_1999/1998_2.html"><img src="pages/td/スライド164.JPG" alt="1998-2"></a></td>
                     <td><a href="1998_1999/1998_3.html"><img src="pages/td/スライド165.JPG" alt="1998-3"></a></td>
