--- a/pages/2024_1.html
+++ b/pages/2024_1.html
@@ -218,8 +218,8 @@ $P$ がとりうる範囲を $xy$ 平面上に図示せよ。</p>
 (1)　このグラスを右の図（省略します。ネットで検索してください🙇）のように角度 $\alpha$ だけ傾けたとき，できる水面はだ円である。このだ円の中心からグラスのふちを含む平面までの距離 $l$ と，楕円の長半径 $a$ および短半径 $b$ を，$m=\tan\alpha$ で表せ。ただし楕円の長半径，短半径とは，それぞれ長軸，短軸の長さの $\dfrac{1}{2}$ のことである。<br>
 <br>
 (2)　傾けたときこぼれた水の量が，最初の水の量の $\dfrac{1}{2}$ であるとき，$m=\tan\alpha$ の値を求めよ。ただしグラスの円錐の頂点から，新しい水面までの距離を $h$ とするとき，残った水量は，$\dfrac{1}{3}\pi abh$ に等しいことを用いよ。<br><br>(<span style="color: orange;">東大1986</span>)<br><br><div class="toggle-box" style="text-align: left;">
-                <input type="checkbox" id="2024-1-p3">
-                <label for="2024-1-p3"
+                <input type="checkbox" id="2024-1-p11">
+                <label for="2024-1-p11"
                 class="toggle-label">▶ ひとこと</label>
                 <div class="toggle-content">   
                     東大と円錐曲線といえば外せない、伝説の問題。<br>
@@ -237,7 +237,7 @@ $P$ がとりうる範囲を $xy$ 平面上に図示せよ。</p>
 <br>
 $$\begin{cases}(\mathrm{i}) P は A,O いずれとも異なる。 \\(\mathrm{ii}) \angle{AOP} \leqq\frac{2\pi}{3}\\(\mathrm{iii}) \angle{OAP} \leqq\frac{\pi}{4}\end{cases}$$
 
-$P$ が動きうる範囲を $K$ とする。 $K$ の体積を求めよ。<br><br>（東大2024　魔改造）※条件(i)(ii)(iii)は原作と微妙に異なるので注意</p><br><br><div class="toggle-box" style="text-align: left;">
+$P$ が動きうる範囲を $K$ とする。 $K$ の体積を求めよ。<br><br>（<span style="color: red;">東大2024　魔改造</span>）<br>※条件(i)(ii)(iii)は原作と微妙に異なるので注意</p><br><br><div class="toggle-box" style="text-align: left;">
                 <input type="checkbox" id="2024-1-p2">
                 <label for="2024-1-p2"
                 class="toggle-label">▶ ひとこと&答え</label>
