--- a/pages/2025_2.html
+++ b/pages/2025_2.html
@@ -301,12 +301,12 @@
             <div class="emphbox">$$\lim_{n\rightarrow\infty}\Bigg(\int_0^1\frac{1}{1+x^n}dx\Bigg)^n　　（東大模試抜粋）$$</div>
 
 
-            <div class="emphbox">$$\lim_{n\rightarrow\infty}n\Bigg(n\int_1^2\log\bigg(\frac{1+x^{\frac1n}}{2}\bigg)dx-\log2+\frac12\Bigg)　　（東大2025　魔改造）$$<br><br><div class="toggle-box">
+            <div class="emphbox">$$\lim_{n\rightarrow\infty}n\Bigg(n\int_1^2\log\bigg(\frac{1+x^{\frac1n}}{2}\bigg)dx-\log2+\frac12\Bigg)　　{\color{red}（東大2025　魔改造）}$$<br><br><div class="toggle-box">
                 <input type="checkbox" id="2025-2-p3">
                 <label for="2025-2-p3"
                 class="toggle-label">▶ ひとこと</label>
                 <div class="toggle-content">   
-                    こんな見た目でも、部分積分を頑張れば解けます。（途中のロピタルは級数とかor平均値で正当化しといてください）
+                    こんな見た目でも、部分積分を頑張れば解けます。（途中で出てくるロピタル型の極限は級数or平均値とかで正当化しといてください）
                 </div>
             </div></div>
 
