--- a/pages/2004_1.html
+++ b/pages/2004_1.html
@@ -88,8 +88,8 @@
             <h2><div>東大理系数学 2004-1</div></h2>
 
             <div class="emphbox">
-                <p>$xy$平面の放物線 $y=x^2$ 上の3点 P, Q, R が次の条件をみたしている。<br>
-△PQR は一辺の長さ $a$ の正三角形であり、点 P, Q を通る直線の傾きは $\sqrt{2}$ である。<br>
+                <p>$xy$平面の放物線 $y=x^2$ 上の3点 P, Q, R が次の条件をみたしている。<br><br>
+△PQR は一辺の長さ $a$ の正三角形であり、点 P, Q を通る直線の傾きは $\sqrt{2}$ である。<br><br>
 このとき、$a$ の値を求めよ。</p>
             </div>
 
@@ -214,6 +214,22 @@ $p$：$z_1,z_2,z_3$ を頂点とする三角形が正三角形である　　$q$
                     【4心一致】 垂心と外心が一致しているから当然同値だが、これだけ答えてもマルはもらえなさそうなので、以下のように示す<br><br>
                     (p⇒q)【外心からみた頂点】$z_1,z_2,z_3$を極座標で置き、和=0を示す<br>
                     (q⇒p)【3辺相等】 $z_3$のみ移項して、両辺の絶対値を2乗。3点の距離が互いに等しいことを示す
+                </div>
+            </div></div><br>
+
+
+
+            <div class="emphbox">$xy$平面の放物線 $y=x^2$ 上の3点 P, Q, R が次の条件をみたしている。<br><br>
+△PQR は一辺の長さ $a$ の正三角形であり、点 P, Q を通る直線の傾きは $\sqrt{k}$ である。(ただし $k$ は $\frac13$ より大きい実数とする)<br><br>
+このとき、 $a$ の最小値を求めよ。<br><br>（<span style="color: red;">東大2004　魔改造</span>）<br><br><div class="toggle-box" style="text-align: left;">
+                <input type="checkbox" id="2004-1-p3_5">
+                <label for="2004-1-p3_5"
+                class="toggle-label">▶ ひとこと&答え</label>
+                <div class="toggle-content">   
+                    傾きを可変にするだけで第六問級の難易度に変貌！<br>
+                    【垂直& $\frac{\sqrt3}{2}$ 倍】本問の解答例と同様の変形を行う。
+                    $$答え : 2\sqrt3$$
+                    (※この答えは複数人のチェックを通していないので、誤りを含む可能性があります。ご了承ください)
                 </div>
             </div></div><br>
 
