--- a/pages/2004_1.html
+++ b/pages/2004_1.html
@@ -220,16 +220,14 @@ $p$：$z_1,z_2,z_3$ を頂点とする三角形が正三角形である　　$q$
 
 
             <div class="emphbox">$xy$平面の放物線 $y=x^2$ 上の3点 P, Q, R が次の条件をみたしている。<br><br>
-△PQR は一辺の長さ $a$ の正三角形であり、点 P, Q を通る直線の傾きは $\sqrt{k}$ である。(ただし $k$ は $\frac13$ より大きい実数とする)<br><br>
-このとき、 $a$ の最小値を求めよ。<br><br>（<span style="color: red;">東大2004　魔改造</span>）<br><br><div class="toggle-box" style="text-align: left;">
+△PQR は一辺の長さ $a$ の正三角形であり、点 P, Q を通る直線の傾きは $\sqrt{t}$ である。(ただし $t$ は $\frac13$ より大きい実数とする)<br><br>
+このとき、 $a$ の値を $t$ を用いて表し、最小値を求めよ。また、極限 $\displaystyle{\lim_{t\rightarrow\frac13+0}\left\{\left(t-\frac13\right)a\right\}}$ を求めよ。<br><br>（<span style="color: red;">東大2004　魔改造</span>）<br><br><div class="toggle-box" style="text-align: left;">
                 <input type="checkbox" id="2004-1-p3_5">
                 <label for="2004-1-p3_5"
-                class="toggle-label">▶ ひとこと&答え</label>
+                class="toggle-label">▶ ひとこと</label>
                 <div class="toggle-content">   
                     傾きを可変にするだけで第六問級の難易度に変貌！<br>
                     【垂直& $\frac{\sqrt3}{2}$ 倍】本問の解答例と同様の変形を行う。
-                    $$答え : 2\sqrt3$$
-                    (※この答えは複数人のチェックを通していないので、誤りを含む可能性があります。ご了承ください)
                 </div>
             </div></div><br>
 
