--- a/pages/2019_1.html
+++ b/pages/2019_1.html
@@ -203,7 +203,7 @@
 
             <p>何が言いたいのかというと、本問の式は、見た目が非常に$\int y \frac{dx}{dt}dt$に似ているので、作問時点では求積問題だったのでは？ということです。ここからは完全に予想になってしまうのですが、おそらく本問は次のように作問されたのかなと思います。</p><br>
 
-            <p>ボス問級の求積問題を作ろう！<br>↓<br>放物線との距離を考える問題ができた！それなりに東大らしい良問になりそう<br>↓<br>と思ったらほかの問題で後半4,5,6問が埋まってしまった...<br>↓<br>1番級のものに改題するために、計算の部分だけ出そうかな<br>↓<br>無駄な符号は消して、あとは知識勝負になりがちな$\int\frac{1}{\sqrt{1+x^2}}dx$も、普通のtan置換に変えておくか...<br>↓<br>結局大問1として出題される</p>
+            <p>ボス問級の求積問題を作ろう！<br>↓<br>放物線との距離を考える問題ができた！それなりに良問になりそう<br>↓<br>と思ったらほかの問題で後半4,5,6問が埋まってしまった...<br>↓<br>1番級のものに改題するために、計算の部分だけ出そうかな<br>↓<br>無駄な符号は消して、あとは知識勝負になりがちな$\int\frac{1}{\sqrt{1+x^2}}dx$も、普通のtan置換に変えておくか...<br>↓<br>大問1として出題される</p>
 
         
 
