--- a/pages/2020_6.html
+++ b/pages/2020_6.html
@@ -142,11 +142,11 @@ $2x^2+y^2 < r^2$<br>
             <h2><div>問題の背景</div></h2>
 
             <p>東大がたまに出す、「論理/同値変形」がらみの問題です。こういう問題が出ると、「そもそも何を言っているのか分からない」となることがありますが、これは高校生に限った話ではなく、大学数学でもある話のようです。(※)</p>
-            <p>東大がこういう問題を出すのは、「せめて必要と十分や、同値性、任意と存在くらいは理解している人を入学させたい」という目的があるのでしょう。<br>それに、実を言うと今の教授の方々の世代に当たる1950年代では論理や写像を必修にしていたという歴史があるので、こういう問題は、大学側が写像・論理の復活を望んでいることをほのめかしているのかもしれません。（憶測です。無視してください）</p><br>
+            <p>東大がこういう問題を出すのは、「せめて必要と十分や、同値性、任意と存在くらいは理解している人を入学させたい」という目的があるのでしょうか。</p><br>
 
-            <p>そういうこともあって、[解答例]では論理記号と日本語を併用しつつ記述してみました。かえってわかりにくいかもしれませんが、誤解はほぼ無いと思います。一応記号の説明をしておくと、「$\exists r$」と書いたときは「ある$r$が存在して」と読み、「$\forall \alpha$」と書いたときは「任意の$\alpha$に対し」と読みます。なので、[解答例]における(2)4行目は、「0より大きく1より小さいある実数$r$が存在して、0以上$2\pi$未満の任意の実数$\alpha$に対して、0以上$r$未満の任意の実数$R$に対し、[～（以下略）]」となります。英語同様に後付けで文章を書くので、日本語だと違和感がすごいですね。<br>（重箱の隅をつつくような話をすると、変数の範囲が実数であることも論理式に組み込むべきです）</p><br>
+            <p>そういうこともあって、[解答例]では論理記号を併用しつつ記述してみました。（かえってわかりにくいかもしれませんが...）一応記号の説明をしておくと、「$\exists r$」と書いたときは「ある$r$が存在して」と読み、「$\forall \alpha$」と書いたときは「任意の$\alpha$に対し」と読みます。なので、[解答例]における(2)4行目は、<span style="color: rgb(255, 166, 0);">「0より大きく1より小さいある実数$r$が存在して、0以上$2\pi$未満の任意の実数$\alpha$に対して、0以上$r$未満の任意の実数$R$に対し、[～（以下略）]」</span>となります。英語同様に後付けで文章を書くので、日本語だと違和感がすごいですね。<br>（ちなみに細かい話をすると、変数の範囲が実数であることも論理式に組み込むべきです）</p><br>
 
-            <p>このような論理変形のあれこれは注意事項がかなり多く、知らないうちに地雷を踏むこともしばしばあります。私は某予備校T進の回し者ではないですが、青木純二先生の「数学の真髄」（書籍）はこのあたりが非常によくまとめられていて、東大志望者にはオススメです。受験生は知る必要は無いと言う意見も見かけますが、私は、これを学んでこそ数学が得意だと名乗れると思っています。（もちろん高3の夏とかに学び始めるのは、表面上でしか身につかないのでおすすめしない）</p>
+            <p>このような論理変形のあれこれは注意事項がかなり多く、知らないうちに地雷を踏むこともしばしばあります。私は某予備校の回し者ではないですが、青木純二先生の<span class="ora">「数学の真髄」</span>（書籍）はこのあたりが非常によくまとめられていて、東大志望者にはオススメです。しばしば受験生はこのレベルの知識を知る必要は無いと言う意見も見かけますが、私は数学を勉強する前提となる常識を身につけるという点で重要だと思っています。（もちろん高3の夏とかに学び始めるのは、表面上しか身につかないのでおすすめしない）</p>
             <p>(※)完全な余談になりますが、「きいねく」さんがfanboxで論理式に関するマンガを投稿されていたので、興味があったらどうぞ。（<a href="https://keyneqq.fanbox.cc/posts/2047711">https://keyneqq.fanbox.cc/posts/2047711</a>）</p>
         </div>
 
@@ -194,13 +194,13 @@ $f=xu+2xv+3yu+4yv$<br>
 <br>
 $T=\{w\mid w=z^2-2z\ \text{ならば}\ |z|\le\frac{5}{4}\}$<br>
 <br>
-とする。このとき，$T$ に属する複素数 $w$ で絶対値 $|w|$ が最大となるような $w$ の値を求めよ。<br><br>（<span style="color: orange;">東大2005</span>）</div><br>
+とする。このとき，$T$ に属する複素数 $w$ で絶対値 $|w|$ が最大となるような $w$ の値を求めよ。<br><br>（<span class="ora">東大2005</span>）</div><br>
 
 
 
             <div class="emphbox">$C$ を $y=x^3-x,\ -1\le x\le 1$ で与えられる $xy$ 平面上の図形とする。次の条件をみたす $xy$ 平面上の点 $P$ 全体の集合を図示せよ。<br>
 <br>
-「$C$ を平行移動した図形で，点 $P$ を通り，かつもとの図形 $C$ との共有点がただ $1$ 点であるようなものが，ちょうど $3$ 個存在する。」<br><br>(<span style="color: orange;">東大1988</span>,激ムズ)<br><iframe width="560" height="315" src="https://www.youtube.com/embed/QpMp_eDDwHc?si=_5rJxgXTTyuoFTvY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+「$C$ を平行移動した図形で，点 $P$ を通り，かつもとの図形 $C$ との共有点がただ $1$ 点であるようなものが，ちょうど $3$ 個存在する。」<br><br>(<span class="ora">東大1988</span>,激ムズ)<br></div>
 
         </div>
 
