--- a/pages/2024_1.html
+++ b/pages/2024_1.html
@@ -217,7 +217,7 @@ $P$ がとりうる範囲を $xy$ 平面上に図示せよ。</p>
 <br>
 (1)　このグラスを右の図（省略します。ネットで検索してください🙇）のように角度 $\alpha$ だけ傾けたとき，できる水面はだ円である。このだ円の中心からグラスのふちを含む平面までの距離 $l$ と，楕円の長半径 $a$ および短半径 $b$ を，$m=\tan\alpha$ で表せ。ただし楕円の長半径，短半径とは，それぞれ長軸，短軸の長さの $\dfrac{1}{2}$ のことである。<br>
 <br>
-(2)　傾けたときこぼれた水の量が，最初の水の量の $\dfrac{1}{2}$ であるとき，$m=\tan\alpha$ の値を求めよ。ただしグラスの円錐の頂点から，新しい水面までの距離を $h$ とするとき，残った水量は，$\dfrac{1}{3}\pi abh$ に等しいことを用いよ。<br><br>(<span style="color: orange;">東大1986</span>)<br><br><div class="toggle-box" style="text-align: left;">
+(2)　傾けたときこぼれた水の量が，最初の水の量の $\dfrac{1}{2}$ であるとき，$m=\tan\alpha$ の値を求めよ。ただしグラスの円錐の頂点から，新しい水面までの距離を $h$ とするとき，残った水量は，$\dfrac{1}{3}\pi abh$ に等しいことを用いよ。<br><br>(<span class="ora">東大1986</span>)<br><br><div class="toggle-box" style="text-align: left;">
                 <input type="checkbox" id="2024-1-p11">
                 <label for="2024-1-p11"
                 class="toggle-label">▶ ひとこと</label>
