--- a/pages/2024_5.html
+++ b/pages/2024_5.html
@@ -138,7 +138,7 @@
 
             <p><img src="figure/20245.jpg" style="max-width: 100%;width: 400px;">
             
-            <p>以上二つを踏まえて今回の問題を眺めてみましょう。最遠点と最近点は、三角形の端または回転軸上の$x=t$の点から下ろした垂線の足なので、①より線分をつなげたものになります。すると②よりこれの回転体の体積を求めるには、$\sqrt{（tの2次式）}$の2乗に$\pi$を書けたものを積分していく(円環の面積計算)ことになるので、多項式の積分で済むことが一目瞭然です。</p>
+            <p>以上二つを踏まえて今回の問題を眺めてみましょう。最遠点と最近点は、三角形の端または回転軸上の$x=t$の点から下ろした垂線の足なので、①より線分をつなげたものになります。すると②よりこれの回転体の体積を求めるには、$\sqrt{tの2次式}$の2乗に$\pi$を書けたものを積分していく(円環の面積計算)ことになるので、多項式の積分で済むことが一目瞭然です。</p>
         </div>
 
         <div class="paragraph">
