--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
               カウントダウンを読み込み中…
             </div><br>
 
+            <div class="emphbox" style="text-align: center;"><span id="feature">オススメ解説▶<a href="pages/2004_1.html">2004-1</a></span><br><br><img src="pages/td/スライド127.JPG" width="80px" style="border: 4px solid #555;"></div><br>
+
 
             <div class="toggle-box" style="text-align: left;">
                 <input type="checkbox" id="bookmark-toggle">
@@ -129,6 +131,8 @@
                 <label for="update_log"
                 class="toggle-label">▶ 更新ログ(タップで展開)</label>
                 <div class="toggle-content" style="background-color: #0c201d;text-align: left;color: #FFF;">   
+                      <p>2026/1/22　：　<a href="pages/2018_6.html">2018-6解説</a>投稿</p>
+
                       <p>2025/12/28　：　<a href="pages/2024_1.html">2024-1解説</a>投稿</p>
 
                       <p>2025/12/27　：　<a href="pages/2004_1.html">2004-1解説</a>投稿</p>
@@ -204,7 +208,7 @@
                     <td><a href="pages/2020_3.html"><img src="pages/td/スライド33.JPG" alt="2020-3"></a></td>
                     <td><a href="pages/2020_4.html"><img src="pages/td/スライド34.JPG" alt="2020-4"></a></td>
                     <td><a href="pages/2020_5.html"><img src="pages/td/スライド35.JPG" alt="2020-5"></a></td>
-                    <td><a href="pages/2020_6.html"><img class="fi new ans" src="pages/td/スライド36.JPG" alt="2020-6"></a></td>
+                    <td><a href="pages/2020_6.html"><img class="fi ans" src="pages/td/スライド36.JPG" alt="2020-6"></a></td>
                 </tr>
                 <tr>
                     <th>2019年<br><span style="font-size: 0.5em;">伝説の積分</span></th>
@@ -224,7 +228,7 @@
                     <td><a href="pages/2018_3.html"><img src="pages/td/スライド45.JPG" alt="2018-3"></a></td>
                     <td><a href="pages/2018_4.html"><img src="pages/td/スライド46.JPG" alt="2018-4"></a></td>
                     <td><a href="pages/2018_5.html"><img src="pages/td/スライド47.JPG" alt="2018-5"></a></td>
-                    <td><a href="pages/2018_6.html"><img src="pages/td/スライド48.JPG" alt="2018-6"></a></td>
+                    <td><a href="pages/2018_6.html"><img class="fi new" src="pages/td/スライド48.JPG" alt="2018-6"></a></td>
                 </tr>
                 <tr>
                     <th>2017年<br><span style="font-size: 0.5em;">珍しくA問題がある</span></th>
