--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                     <td><a href="pages/2018_3.html"><img src="pages/td/スライド45.JPG" alt="2018-3"></a></td>
                     <td><a href="pages/2018_4.html"><img src="pages/td/スライド46.JPG" alt="2018-4"></a></td>
                     <td><a href="pages/2018_5.html"><img src="pages/td/スライド47.JPG" alt="2018-5"></a></td>
-                    <td><a href="pages/2018_6.html"><img class="fi new" src="pages/td/スライド48.JPG" alt="2018-6"></a></td>
+                    <td><a href="pages/2018_6.html"><img class="fi new ans" src="pages/td/スライド48.JPG" alt="2018-6"></a></td>
                 </tr>
                 <tr>
                     <th>2017年<br><span style="font-size: 0.5em;">珍しくA問題がある</span></th>
